--- a/systems/dnd/Cargo.toml
+++ b/systems/dnd/Cargo.toml
@@ -1,15 +1,9 @@
 [package]
-name = "sfrpg"
-version = "0.1.0-alpha"
+name = "dnd"
+version = "0.1.0"
 authors = ["DoctorVWA"]
 edition = "2018"
 
 [dependencies.druid]
 git = "https://github.com/xi-editor/druid.git"
 features = ["im"]
-
-[dependencies.dnd]
-path = "./systems/dnd"
-
-[dependencies.ct]
-path = "./systems/ct"
