--- a/systems/dnd5e/Cargo.toml
+++ b/systems/dnd5e/Cargo.toml
@@ -7,3 +7,6 @@ edition = "2018"
 [dependencies.druid]
 git = "https://github.com/xi-editor/druid.git"
 features = ["im"]
+
+[dependencies.json]
+version = "0.12.4"
